// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<div
  className="fieldgroup col-12 flex-column"
>
  <div
    className="fieldgroup col-12 bg-dark basic-input border text-light py-3"
  >
    <div
      className="pl-1 my-auto d-none d-sm-block d-xl-none"
    >
      Expenses
    </div>
    <div
      className="pl-1 my-auto d-sm-none d-xl-block"
    >
      Expense
    </div>
    <div
      className="pr-1 my-auto d-sm-none d-xl-block"
    >
      Amount
    </div>
  </div>
  <div
    className="fieldarray mb-5"
  >
    <div
      className="d-flex py-3 font-italic text-muted justify-content-center"
    >
      <h5>
        No expense
      </h5>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="fieldgroup col-12 flex-column"
>
  <div
    className="fieldgroup col-12 bg-dark basic-input border text-light py-3"
  >
    <div
      className="pl-1 my-auto d-none d-sm-block d-xl-none"
    >
      Expenses
    </div>
    <div
      className="pl-1 my-auto d-sm-none d-xl-block"
    >
      Expense
    </div>
    <div
      className="pr-1 my-auto d-sm-none d-xl-block"
    >
      Amount
    </div>
  </div>
  <div
    className="fieldarray mb-5"
  >
    <ExpenseListItem
      amount={195}
      count={1}
      createdAt={0}
      description="gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      count={2}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      count={3}
      createdAt={345600000}
      description="creditcard"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
